name:                CripHask
version:             0.1.0.0
synopsis:            Criptografía en Haskell.
description:         Please see README.md
-- homepage:            https://github.com/jaalonso/CripHask#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Rodríguez
maintainer:          danrodcha@gmail.com
copyright:           2016
category:            Test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Asociacion1
                     , Asociacion2
                     , Asociacion3
                     , Criptoanalisis
                     , Generadores
                     , Cesar
                     , Afin
                     , Vigenere
                     , Hill
                     , Permutaciones
                     , DES
                     , Asociacion4
                     , RSA
                     , ElGamal
                     , Rabin
  build-depends:       base >= 4.7 && < 5
                     , toolshed >= 0.16
                     , factory >= 0.2
                     , QuickCheck
                     , extra
                     , primes
                     , text
                     , matrix
                     , RSA
                     , DRBG
                     , random
                     , arithmoi
                     , crypto-api
  default-language:    Haskell2010

-- executable CripHask-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , CripHask
--   default-language:    Haskell2010
-- 
-- test-suite CripHask-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , CripHask
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
-- 
-- source-repository head
--   type:     git
--   location: https://github.com/jaalonso/CripHask
